tests/machine/x/pascal/cross_join.error
line: 72
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/cross_join.pas
cross_join.pas(63,14) Error: Incompatible types: got "TArray$1$crcE0B4E8C7" expected "TArray$1$crc7ED07D64"
cross_join.pas(67,35) Error: identifier idents no member "orderId"
cross_join.pas(67,76) Error: identifier idents no member "orderCustomerId"
cross_join.pas(68,40) Error: identifier idents no member "orderTotal"
cross_join.pas(69,15) Error: identifier idents no member "pairedCustomerName"
cross_join.pas(72) Fatal: There were 5 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

